--- a/profiles/templates/profiles/order_history.html
+++ b/profiles/templates/profiles/order_history.html
@@ -3,7 +3,7 @@
 {% block extra_title %}Order History{% endblock %}
 
 {% block content %}
-  <div class="container mt-4">
+  <div class="container mt-4 mb-5">
     <h1>Your Orders</h1>
     {% if orders %}
       <ul class="list-group">
