--- a/profiles/templates/profiles/profiles.html
+++ b/profiles/templates/profiles/profiles.html
@@ -15,7 +15,7 @@
             <hr>
         </div>
     </div>
-    <div class="row">
+    <div class="row mb-5">
         <div class="col-6">
             <p class="text-muted">Default Delivery Information</p>
             <p>{{ profile.user.first_name }}</p>
