--- a/catalog/templates/home/essential_oils.html
+++ b/catalog/templates/home/essential_oils.html
@@ -4,46 +4,68 @@
 {% block extra_title %} Essential Oils {% endblock %}
 
 {% block content %}
-  <div class="container mt-5">
+<div class="container mt-3">
+  <div class="row mt-1 mb-2">
+    <div class="col-12 col-md-6 my-auto order-md-last d-flex justify-content-center justify-content-md-end">
+      <div class="w-30">
+        <form id="sort-form" action="{% url 'essential_oils' %}" method="GET">
+          <div class="form-group">
+            <label for="sort-by">Sort by:</label>
+            <select class="form-control" id="sort-by" name="sort" onchange="this.form.submit()">
+              <option value="name_asc" {% if request.GET.sort == 'name_asc' %} selected {% endif %}>Name (A-Z)</option>
+              <option value="name_desc" {% if request.GET.sort == 'name_desc' %} selected {% endif %}>Name (Z-A)
+              </option>
+              <option value="price_asc" {% if request.GET.sort == 'price_asc' %} selected {% endif %}>Price (Low to
+                High)</option>
+              <option value="price_desc" {% if request.GET.sort == 'price_desc' %} selected {% endif %}>Price (High to
+                Low)</option>
+              <option value="rating_asc" {% if request.GET.sort == 'rating_asc' %} selected {% endif %}>Rating (Low to
+                High)</option>
+              <option value="rating_desc" {% if request.GET.sort == 'rating_desc' %} selected {% endif %}>Rating (High
+                to Low)</option>
+            </select>
+          </div>
+        </form>
+      </div>
+    </div>
     <div class="col-12 col-md-6 order-md-first">
       <p class="text-muted mt-3 text-center text-md-left">
-          {% if search_term or current_categories or current_sorting != 'None_None' %}
-              <span class="small"><a href="{% url 'products' %}">All products</a> | </span>
-          {% endif %}
-          {{ num_products }} Products{% if search_term %} found for <strong>"{{ search_term }}"</strong>{% endif %}
+          <a href="{% url 'products' %}">All products</a> |
+          {{ num_products }} Essential Oils.
       </p>
     </div>
-    <h2 class="my-4">Essential Oils</h2>
-    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4">
-      {% for oil in essential_oils %}
-        <div class="col mb-5">
-          <div class="card h-100">
-            <a href="{% url 'product_details' oil.id %}">
-              <img src="{{ oil.image.url }}" class="card-img-top" alt="{{ oil.name }}">
-              <h5 class="card-title py-3 text-dark text-center">{{ oil.name }}</h5>
-            </a>
-            <div class="card-body">
-              <p class="card-text">Scent: {{ oil.scent }}</p>
-              <p class="card-text">Volume: {{ oil.volume }}</p>
-              {% if oil.discounted_price %}
-              <del>${{ oil.price }}</del> <span class="discount">${{ oil.discounted_price }}</span>
-              {% else %}
-              ${{ oil.price }}
-              {% endif %}
-              <p class="text-muted">
-                <i class="fas fa-star mr-1"></i>
-                {% if oil.avg_rating %}
-                  {{ oil.avg_rating|floatformat:1 }} / 5
-                {% else %}
-                  No rating
-                {% endif %}
-              </p>
-            </div>
-          </div>
-        </div>
-      {% empty %}
-        <p>No essential oils found.</p>
-      {% endfor %}
-    </div>
   </div>
+  <h2 class="my-4">Essential Oils</h2>
+  <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4">
+    {% for oil in essential_oils %}
+    <div class="col mb-5">
+      <div class="card h-100">
+        <a href="{% url 'product_details' oil.id %}">
+          <img src="{{ oil.image.url }}" class="card-img-top" alt="{{ oil.name }}">
+          <h5 class="card-title py-3 text-dark text-center">{{ oil.name }}</h5>
+        </a>
+        <div class="card-body">
+          <p class="card-text">Scent: {{ oil.scent }}</p>
+          <p class="card-text">Volume: {{ oil.volume }}</p>
+          {% if oil.discounted_price %}
+          <del>${{ oil.price }}</del> <span class="discount">${{ oil.discounted_price }}</span>
+          {% else %}
+          ${{ oil.price }}
+          {% endif %}
+          <p class="text-muted">
+            <i class="fas fa-star mr-1"></i>
+            {% if oil.avg_rating %}
+            {{ oil.avg_rating|floatformat:1 }} / 5
+            {% else %}
+            No rating
+            {% endif %}
+          </p>
+        </div>
+      </div>
+    </div>
+    {% empty %}
+    <p>No essential oils found.</p>
+    {% endfor %}
+  </div>
+</div>
 {% endblock %}
