--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -19,7 +19,7 @@
       </div>
     </div>
 
-    <div class="row">
+    <div class="row mb-5">
       <div class="col-12 col-lg-6 order-lg-last mb-5">
         <p class="text-muted">Order Summary ({{ basket_items.count }})</p>
         <div class="row">
