--- a/checkout/templates/checkout/order_detail.html
+++ b/checkout/templates/checkout/order_detail.html
@@ -161,7 +161,7 @@
       </div>
     </div>
   </div>
-  <div class="row">
+  <div class="row mb-5 mt-3">
     <div class="col-12 col-lg-7">
       <a href="{% url 'profile' %}" class="btn btn-checkout">
         <span class="icon mr-2">
@@ -169,7 +169,7 @@
         </span>
         <span class="text-uppercase">Go to Profile</span>
       </a>
-      <a href="{% url 'order_history' %}" class="btn btn-checkout text-uppercase">Order history</a>
+      <a href="{% url 'order_history' %}" class="btn btn-checkout text-uppercase float-right">Order history</a>
     </div>
   </div>
 </div>
