--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
     integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
   <link href="//cdn-images.mailchimp.com/embedcode/classic-071822.css" rel="stylesheet" type="text/css">
-  <link rel="icon" type="image/x-icon" href="s3://eddiestn-liquid-smoke/static/images/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="https://eddiestn-liquid-smoke.s3.eu-west-2.amazonaws.com/static/images/favicon.ico">
   <link rel="stylesheet" href="{% static 'css/base.css' %}">
   {% endblock %}
 
