--- a/profiles/templates/profiles/profiles.html
+++ b/profiles/templates/profiles/profiles.html
@@ -8,25 +8,24 @@
 {% block content %}
 <div class="overlay"></div>
 <div class="container">
-    <div class="row">
-        <div class="col">
+    <div class="row justify-content-center mb-3">
+        <div class="col justify-content-center">
             <hr>
             <h2 class="logo-font mb-4">My Profile</h2>
             <hr>
+            <h5>Hello {{ user_profile.user }}!</h5>
+            <p>Click <a href="{% url 'account_set_password' %}">HERE </a>to set a new password.</p>
         </div>
     </div>
-    <div class="row mb-5">
-        <div class="col-6">
+    <div class="row mb-5 justify-content-center">
+        <div class="col-lg-6 col-md-8 col-sm-12">
             <p class="text-muted">Default Delivery Information</p>
-            <p>{{ profile.user.first_name }}</p>
-            <p>{{ profile.user.last_name }}</p>
-            <p>{{ profile.user.email }}</p>
             <form class="mt-3" action="{% url 'profile' %}" method="POST" id="profile-update-form">
                 {% csrf_token %}
                 {{ form|crispy }}
-                <button class="btn btn-checkout rounded-0 text-uppercase float-left">Update Information</button>
+                <button class="btn btn-checkout btn-sm text-uppercase float-left">Update Info</button>
             </form>
-            <a href="{% url 'order_history' %}" class="btn btn-checkout rounded-0 text-uppercase float-right">
+            <a href="{% url 'order_history' %}" class="btn btn-checkout btn-sm text-uppercase float-right">
                 Order history <span class="icon mr-2"><i class="fas fa-angle-right"></i></span></a>
         </div>
     </div>
