--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 
-<div class="row justify-content-center">
+<div class="row justify-content-center mb-5">
   <div class="col-md-6">
     <div class="card">
       <div class="card-body">
