--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -5,7 +5,7 @@
 {% block head_title %}{% trans "Sign Out" %}{% endblock %}
 
 {% block content %}
-<div class="container mt-5">
+<div class="container my-5">
   <div class="row justify-content-center">
     <div class="col-md-6 col-sm-8">
       <h1 class="text-center">{% trans "Sign Out" %}</h1>
