--- a/templates/allauth/account/password_reset.html
+++ b/templates/allauth/account/password_reset.html
@@ -5,7 +5,7 @@
 {% block head_title %}{% trans "Password Reset" %}{% endblock %}
 
 {% block content %}
-  <div class="container">
+  <div class="container my-5">
     <h1 class="text-center mb-5">{% trans "Password Reset" %}</h1>
 
     {% if user.is_authenticated %}
