--- a/templates/allauth/account/password_reset_from_key_done.html
+++ b/templates/allauth/account/password_reset_from_key_done.html
@@ -5,7 +5,7 @@
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block content %}
-  <div class="container mt-5">
+  <div class="container my-5">
     <h1 class="text-center">{% trans "Change Password" %}</h1>
     <div class="mt-5">
       <p class="text-center">{% trans 'Your password has been changed successfully.' %}</p>
