--- a/catalog/templates/home/product_details.html
+++ b/catalog/templates/home/product_details.html
@@ -28,11 +28,11 @@
             <p class="text-muted">
                 <i class="fas fa-star mr-1"></i>
                 {% if product.avg_rating %}
-                  {{ product.avg_rating|floatformat:1 }} / 5
+                {{ product.avg_rating|floatformat:1 }} / 5
                 {% else %}
-                  No rating
+                No rating
                 {% endif %}
-              </p>
+            </p>
             {% if request.user.is_authenticated %}
             <form method="POST" action="{% url 'add_to_basket' product.id %}">
                 {% csrf_token %}
@@ -47,7 +47,8 @@
             </form>
             {% else %}
             <h2>Want to make a purchase?</h2>
-            <h5>Please <a href="{% url 'account_login' %}">Login</a> or <a href="{% url 'account_signup' %}">Create an account.</a></h5>
+            <h5>Please <a href="{% url 'account_login' %}">Login</a> or <a href="{% url 'account_signup' %}">Create an
+                    account.</a></h5>
             {% endif %}
             {% if request.user.is_authenticated and request.user.is_superuser %}
             <div class="mt-3">
@@ -63,18 +64,28 @@
         <div class="col-md-6">
             <h2>Reviews</h2>
             {% if reviews %}
-                <ul>
-                    {% for review in reviews %}
-                        <li>
-                            <p><i class="fas fa-star mr-1"></i>{{ review.rating }} / 5</p>
-                            <p><strong>{{ review.title }}</strong></p>
-                            <p>{{ review.body }}</p>
-                            <small>Posted by {{ review.user.username }} on {{ review.created_at }}</small>
-                        </li>
-                    {% endfor %}
-                </ul>
+            <ul class="list-unstyled">
+                {% for review in reviews %}
+                <li class="mb-4">
+                    <div class="">
+                        <p><i class="fas fa-star mr-1"></i>{{ review.rating }} / 5</p>
+                        <h4 class="my-3">Title: {{ review.title }}</h4>
+                        <p>Body: {{ review.body }}</p>
+                        <small>Posted by {{ review.user.username }} on {{ review.created_at }}</small>
+                        {% if request.user.is_authenticated and request.user.is_staff %}
+                        {% if review.approved %}
+                        <p class="text-success my-2">Approved</p>
+                        {% else %}
+                        <p class="text-danger my-2">Not approved</p>
+                        {% endif %}
+                        {% endif %}
+                        <hr class="my-3">
+                    </div>
+                </li>
+                {% endfor %}
+            </ul>
             {% else %}
-                <p>No reviews yet. Be the first to leave a review!</p>
+            <p>No reviews yet. Be the first to leave a review!</p>
             {% endif %}
         </div>
         <div class="col-md-6">
