--- a/checkout/templates/checkout/send_confirmation_email.html
+++ b/checkout/templates/checkout/send_confirmation_email.html
@@ -148,7 +148,7 @@
             </div>
         </div>
         <p>Thank you for shopping with us!</p>
-        <p><a href="" target="_blank" >View your order history.</a> <small>(Opens in a new tab)</small></p>
+        <p><a href="https://liquid-smoke.herokuapp.com/profiles/order_history/" target="_blank" >View your order history.</a> <small>(Opens in a new tab)</small></p>
     </div>
 </body>
 </html>
