Adjust hero styling

--- a/catalog/templates/home/index.html
+++ b/catalog/templates/home/index.html
@@ -4,10 +4,10 @@
 {% block content %}
 
 <section class="hero">
-    <div class="container">
+    <div class="container container-hero">
         <h1 class="hero-text">Welcome to our candle and essential oils store</h1>
-        <h4 class="py-3 hero-text">Shop from our selection of hand-poured candles and pure essential oils</h4>
-        <h4 class="mt-5"><span class="hero-text">Check out our latest</span> <a href="{% url 'specials' %}" class="btn btn-lg btn-checkout p-1">Offers</a></h4>
+        <h4 class="py-3 hero-text hero-subtext">Shop from our selection of hand-poured candles and pure essential oils</h4>
+        <h4><span class="hero-text hero-subtext">Check out our latest</span> <a href="{% url 'specials' %}" class="btn btn-checkout p-2 hero-button">Offers</a></h4>
     </div>
 </section>
 
