--- a/static/css/base.css
+++ b/static/css/base.css
@@ -24,9 +24,22 @@ body {
     padding-top: 20px;
 }
 
+.container-hero {
+    text-align: center;
+}
+
 .hero-text {
     color: #fff;
     text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+    font-size: 2rem;
+}
+
+.hero-subtext {
+    font-size: 1.4rem;
+}
+
+.hero-button {
+    font-size: 1.2rem
 }
 
 .links {
