Add images for Features in README.md

--- a/templates/allauth/account/password_set.html
+++ b/templates/allauth/account/password_set.html
@@ -12,7 +12,7 @@
 
         <form method="POST" action="{% url 'account_set_password' %}" class="password_set mt-5">
           {% csrf_token %}
-          {{ form.as_p }}
+          {{ form | crispy }}
           <div class="text-center">
             <input type="submit" name="action" value="{% trans 'Set Password' %}" class="btn btn-primary"/>
           </div>
