--- a/profiles/templates/profiles/profiles.html
+++ b/profiles/templates/profiles/profiles.html
@@ -7,17 +7,18 @@
 
 {% block content %}
 <div class="overlay"></div>
-<div class="container">
-    <div class="row justify-content-center mb-3">
-        <div class="col justify-content-center">
+<div class="container ">
+    <div class="row mb-3">
+        <div class="col">
+            <hr class="">
+            <h2 class="mb-4">My Profile</h2>
+            <hr class="">
+            <h5 class="">Hello {{ user_profile.user }}!</h5>
+            <p class="">Click <a href="{% url 'account_set_password' %}">HERE </a>to set a new password.</p>
             <hr>
-            <h2 class="logo-font mb-4">My Profile</h2>
-            <hr>
-            <h5>Hello {{ user_profile.user }}!</h5>
-            <p>Click <a href="{% url 'account_set_password' %}">HERE </a>to set a new password.</p>
         </div>
     </div>
-    <div class="row mb-5 justify-content-center">
+    <div class="row mb-5 ">
         <div class="col-lg-6 col-md-8 col-sm-12">
             <p class="text-muted">Default Delivery Information</p>
             <form class="mt-3" action="{% url 'profile' %}" method="POST" id="profile-update-form">
