--- a/templates/allauth/account/password_change.html
+++ b/templates/allauth/account/password_change.html
@@ -13,7 +13,7 @@
                     <div class="card-body">
                         <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
                             {% csrf_token %}
-                            {{ form.as_p }}
+                            {{ form | crispy }}
                             <button type="submit" class="btn btn-primary">{% trans "Change Password" %}</button>
                         </form>
                     </div>
