--- a/templates/allauth/account/password_reset.html
+++ b/templates/allauth/account/password_reset.html
@@ -18,7 +18,7 @@
 
     <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
       {% csrf_token %}
-      {{ form.as_p }}
+      {{ form | crispy }}
       <button type="submit" class="btn btn-primary">{% trans 'Reset My Password' %}</button>
     </form>
 
