--- a/templates/allauth/account/password_reset_from_key.html
+++ b/templates/allauth/account/password_reset_from_key.html
@@ -15,7 +15,7 @@
             {% if form %}
                 <form method="POST" action="{{ action_url }}" class="mt-5">
                     {% csrf_token %}
-                    {{ form.as_p }}
+                    {{ form | crispy }}
                     <input type="submit" name="action" value="{% trans 'Change Password' %}" class="btn btn-primary"/>
                 </form>
             {% else %}
