--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -8,7 +8,7 @@
 
 <div class="container">
 
-  <div class="row justify-content-center mb-5">
+  <div class="row justify-content-center my-5">
     <div class="col-md-8 col-lg-6">
       <div class="card">
         <div class="card-body">
@@ -18,7 +18,7 @@
 
           <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
             {% csrf_token %}
-            {{ form.as_p }}
+            {{ form | crispy }}
             {% if redirect_field_value %}
             <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
             {% endif %}
