--- a/catalog/templates/home/essential_oils.html
+++ b/catalog/templates/home/essential_oils.html
@@ -45,8 +45,10 @@
           <h5 class="card-title py-3 text-dark text-center">{{ product.name }}</h5>
         </a>
         <div class="card-body">
-          <p class="card-text">Scent: {{ product.scent }}</p>
-          <p class="card-text">Volume: {{ product.volume }}</p>
+          {% if product.essentialoil %}
+          <p class="card-text">Scent: {{ product.essentialoil.scent }}</p>
+          <p class="card-text">Volume: {{ product.essentialoil.volume }}</p>
+          {% endif %}
           {% if product.discounted_price %}
           <del>${{ product.price }}</del> <span class="discount">${{ product.discounted_price }}</span>
           {% else %}
